<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LOGIN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="btnenviar">Enviar</string>
    <string name="correo">Correo</string>
    <string name="txtcorreo"></string>
    <string name="asunto">Asunto</string>
    <string name="txtasunto"/>
    <string name="txtmensaje"></string>
    <string name="mensaje">Mensaje</string>
    <string name="btningresar">Ingresar</string>

</resources>
