<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   

    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="444dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/correo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:text="@string/asunto" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/enviar"
            android:layout_below="@+id/txtasunto"
            android:layout_marginTop="34dp"
            android:text="@string/mensaje" />

        <EditText
            android:id="@+id/txtasunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/correo"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/txtasunto" />

        <Button
            android:id="@+id/enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView2"
            android:layout_below="@+id/txtmensaje1"
            android:layout_marginTop="44dp"
            android:text="@string/btnenviar" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/txtcorreo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"
            android:text="@string/correo" />

        <EditText
            android:id="@+id/txtmensaje1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtasunto"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/txtmensaje" />

    </RelativeLayout>

</LinearLayout>